fixed siteMap spacing

--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -69,6 +69,7 @@
     }
     &--mobile {
       display: none;
+      margin-top: 1rem;
       @media (max-width: 575.98px) {
         display: block;
       }
